# stochopy-viewer

./: README.rst  requirements-dev.txt  setup.cfg  tasks.py
stochopy_viewer/: __about__.py  __init__.py  _viewer.py  ttk_spinbox.py
