[metadata]
name = stochopy-viewer
version = 1.3.0
author = Keurfon Luu
email = keurfonluu@outlook.com
description = GUI for stochopy
url = https://github.com/keurfonluu/stochopy-viewer
project_urls =
    Code=https://github.com/keurfonluu/stochopy-viewer
    Issues=https://github.com/keurfonluu/stochopy-viewer/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    stochopy <= 1.7.3
python_requires = >= 3.6
setup_requires =
    setuptools >= 42
    wheel

[options.entry_points]
console_scripts =
    stochopy-viewer = stochopy_viewer:main